--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 	<meta charset="utf-8">
 	<title>Everywhere Gym</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link href='//fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type="text/css">
 </head>
 <body>
 	<img src="img\logo.png">
@@ -15,7 +14,7 @@
 				<div class="loc" style="list-style-type:none">
 					<script id="loc-template" type="text/x-handlebars-template">
 						<span>{{addr}}</span>
-						<span id="Gym" style="visibility: hidden">{{city}}</span>
+						<span id="Gym">{{city}}</span>
 					</script>
 				</div>
 			</div>
